Improve animation - render placeholder separately so it does not have to be animated with characted, and can stay put on rack - fix z-index in cells

--- a/packages/scrabble-solver/src/components/Board/components/Cell/Cell.module.scss
+++ b/packages/scrabble-solver/src/components/Board/components/Cell/Cell.module.scss
@@ -121,7 +121,7 @@ $icon-size: 16px;
   }
 
   &:focus-within {
-    z-index: 1;
+    z-index: 2;
 
     .actions {
       display: flex;
